Modificación en el appId

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "build": {
     "productName": "identitas",
-    "appId": "org.simulatedgreg.electron-vue",
+    "appId": "com.educarpersonas",
     "directories": {
       "output": "build"
     },
