--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,6 +29,14 @@ build_script:
 
 test: off
 
-environment:
-  GH_TOKEN:
+deploy:
+  release: identitas-v$(appveyor_build_version)
+  description: 'Release description'
+  provider: GitHub
+  auth_token:
     secure: dnmMpKAwJ/ER9Rk15CdORHa+EXokPhUrOSMDrdwBl9VUvhvOVvKp4uhYihU7tm1E
+  draft: true
+  prerelease: true
+  on:
+    branch: master                 # release from master branch only
+    appveyor_repo_tag: false
