--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
+    "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1"
   },
