--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "vue": "^2.3.3",
+    "vue-displacement-slideshow": "^1.0.0",
     "vue-electron": "^1.0.6",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^2.5.3",
