--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "vue-displacement-slideshow": "^1.0.0",
     "vue-electron": "^1.0.6",
     "vue-material": "^1.0.0-beta-10.2",
+    "vue-plyr": "^5.1.0",
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1"
   },
